--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,11 @@ dependencies {
     // Spring AI: Elasticsearch
     implementation 'org.springframework.ai:spring-ai-starter-vector-store-elasticsearch'
 
+    // Spring AI: DocumentReader
+    implementation 'org.springframework.ai:spring-ai-pdf-document-reader'
+    implementation 'org.springframework.ai:spring-ai-markdown-document-reader'
+    implementation 'org.springframework.ai:spring-ai-tika-document-reader'
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
